# cf-uav-lab

./: README.md  xyz.xml
devel/: setup.sh
devel/include/ardrone_autonomy/: CamSelectRequest.h  CamSelectResponse.h  FlightAnimRequest.h  FlightAnimResponse.h  LedAnimRequest.h  LedAnimResponse.h  Navdata.h  RecordEnableRequest.h  RecordEnableResponse.h  matrix33.h  navdata_adc_data_frame.h  navdata_altitude.h  navdata_demo.h  navdata_euler_angles.h  navdata_games.h  navdata_gyros_offsets.h  navdata_hdvideo_stream.h  navdata_kalman_pressure.h  navdata_magneto.h  navdata_phys_measures.h  navdata_pressure_raw.h  navdata_pwm.h  navdata_raw_measures.h  navdata_rc_references.h  navdata_references.h  navdata_time.h  navdata_trackers_send.h  navdata_trims.h  navdata_video_stream.h  navdata_vision.h  navdata_vision_detect.h  navdata_vision_of.h  navdata_vision_perf.h  navdata_vision_raw.h  navdata_watchdog.h  navdata_wifi.h  navdata_wind_speed.h  navdata_zimmu_3000.h  vector21.h  vector31.h
devel/lib/mocap_optitrack/: get_vel_node  mocap_node
devel/lib/pkgconfig/: ardrone_autonomy.pc  ardrone_tutorials.pc  mocap_optitrack.pc  plotjuggler.pc  ros_type_introspection.pc
devel/tmp/: ardronelib-gitclone.cmake  ardronelib-gitupdate.cmake
src/Matlab Control/MultiDrone/: MultiARDroneCtrl.slx  ardrone_control.fig  ardrone_control.m  getWaypoints1.m  getWaypoints2.m  getWaypoints3.m  start.m
src/Matlab Control/SingleDrone/: SingleARDroneCtrl.slx  getWaypoints.m  single_ardrone.launch  single_rigidbody.launch  start.m  (+1 more)
src/mocap_optitrack/src/: CMakeLists.txt  get_velocity.cpp
(+122 files in other folders)
